examples/test/testpolicy5713.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5713
  namespace: namespace305
spec:
  podSelector:
    matchLabels:
      key27: value23
      key7: value10
      key4: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value47
          key41: value1
      podSelector:
        matchLabels:
          key12: value1
